--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8899
 spring.application.name=micro-ci-commands
-spring.datasource.url=jdbc:postgresql://postgresdb:5432/microservicesdb?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root1994
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -13,10 +13,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 #RabbitMQ en prod
-spring.rabbitmq.host=10.0.0.5
-spring.rabbitmq.port=40701
-spring.rabbitmq.username=esgi-al1
-spring.rabbitmq.password=g5Y86ck*uQ2&s57
+spring.rabbitmq.host=${RABBITMQ_HOST}
+spring.rabbitmq.port=${RABBITMQ_PORT}
+spring.rabbitmq.username=${RABBITMQ_USERNAME}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 #set queue, exchange and routing key names
 rabbitmq.queue=al1-commands-queue
 rabbitmq.exchange=al1-commands-exchange
