--- a/microservices/src/main/resources/bootstrap.yml
+++ b/microservices/src/main/resources/bootstrap.yml
@@ -1,20 +1,20 @@
 server:
-  port:  8899
+  port:  ${API_PORT}
 spring:
   application:
     name: micro-ci-commands
   cloud:
     consul:
-      host: micro-ci.westus2.cloudapp.azure.com
-      port: 40600
+      host: ${CONSUL_HOST}
+      port: ${CONSUL_PORT}
       discovery:
         tags: traefik.enable=true, traefik.frontend.entryPoints=http, traefik.frontend.rule=PathPrefixStrip:/al1.commands-ci/
         health-check-interval: 10s
-        health-check-url: http://10.0.0.4:8899/api/v1/check
-        acl-token: 874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
+        health-check-url: ${HEALTH_URL}
+        acl-token: ${ACL_TOKEN}
         register: true
         instance-id:  ${spring.application.name}
         service-name: al1-commands
         prefer-ip-address: true
-        ip-address: 10.0.0.4
-        port: 8899
+        ip-address: ${IP_ADDRESS}
+        port: ${API_PORT}
